--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@ h2{
 .set_btn{
   color: blueviolet;
   cursor: pointer;
+
+  position: absolute;
+  top: 10px;
+  right: 20px;
+
+  font-weight: bold;
+  font-size: 12px;
 }
 
 ul.stanza li{
